Create type selection dashboard

--- a/.gitignore
+++ b/.gitignore
@@ -46,6 +46,9 @@ captures/
 .idea/dictionaries
 .idea/libraries
 .idea/caches
+.idea/caches/
+.idea/misc.xml
+misc.xml
 
 # Keystore files
 # Uncomment the following lines if you do not want to check your keystore files in.
@@ -105,6 +108,9 @@ gen-external-apklibs
 *.ipr
 *~
 *.swp
+
+/*/.idea/misc.xml
+/*/.idea/caches
 
 # Android Patch
 
