--- a/ThePersonalTrainerClub/app/src/main/AndroidManifest.xml
+++ b/ThePersonalTrainerClub/app/src/main/AndroidManifest.xml
@@ -11,15 +11,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".view.login.LoginActivity"
-            android:theme="@style/SplashTheme">>
+        <activity
+            android:name=".view.login.LoginActivity"
+            android:theme="@style/SplashTheme">
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".view.register.RegisterActivity"></activity>
+        <activity android:name=".view.register.RegisterActivity" />
+        <activity android:name=".view.typeSelectionDashboard.TypeSelectionActivity"></activity>
     </application>
 
 </manifest>
