--- a/ThePersonalTrainerClub/app/src/main/AndroidManifest.xml
+++ b/ThePersonalTrainerClub/app/src/main/AndroidManifest.xml
@@ -14,8 +14,8 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".view.login.LoginActivity"
-            android:theme="@style/SplashTheme">
-            >
+            android:theme="@style/SplashTheme"
+            android:noHistory="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,7 +23,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".view.register.RegisterActivity" />
-        <activity android:name=".view.typeSelectionDashboard.TypeSelectionActivity"></activity>
+        <activity android:name=".view.typeSelectionDashboard.TypeSelectionActivity" />
+        <activity android:name=".view.dashboard.DashboardActivity"></activity>
     </application>
 
 </manifest>
