Get user real location

--- a/ThePersonalTrainerClub/app/src/main/AndroidManifest.xml
+++ b/ThePersonalTrainerClub/app/src/main/AndroidManifest.xml
@@ -3,6 +3,11 @@
     package="es.exceptioncoders.thepersonaltrainerclub">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
         android:name=".utils.SharedApp"
@@ -23,7 +28,6 @@
             </intent-filter>
         </activity>
         <activity android:name=".view.register.RegisterActivity" />
-        <activity android:name=".view.typeSelectionDashboard.TypeSelectionActivity" />
         <activity android:name=".view.dashboard.DashboardActivity" />
         <activity android:name=".view.addLocation.AddLocationActivity" />
         <activity android:name=".view.addSport.AddSportActivity"></activity>
