--- a/ThePersonalTrainerClub/app/build.gradle
+++ b/ThePersonalTrainerClub/app/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.android.support:design:27.1.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.android.support:support-v4:27.1.1'
     compile 'com.google.android.gms:play-services-location:11.4.0'
     compile 'org.osmdroid:osmdroid-android:6.0.3'
     testImplementation 'junit:junit:4.12'
