Show classes found

--- a/ThePersonalTrainerClub/app/src/main/AndroidManifest.xml
+++ b/ThePersonalTrainerClub/app/src/main/AndroidManifest.xml
@@ -42,7 +42,8 @@
                 android:resource="@xml/file_paths" />
         </provider>
 
-        <activity android:name=".view.classDetail.ClassDetailActivity"></activity>
+        <activity android:name=".view.classDetail.ClassDetailActivity" />
+        <activity android:name=".view.searchClassResult.SearchClassResultActivity"></activity>
     </application>
 
 </manifest>
